--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,9 @@ h2 {
 h3 {
   font-family: 'Montserrat', sans-serif;
   color: #11999E;
+  font-size: 1.5rem;
+  font-weight: normal;
+  padding-bottom: 10px
 }
 
 a {
